examples/bad/chan_send_string.mko
fn main() {
    let ch = chan_new(2)
    let _ = ch.send("nope")
}
